Boblight for Adfruit Neopixe 40 led matrix
Boblight for Adfruit Neopixe 40 led matrix

--- a/boblight.conf
+++ b/boblight.conf
@@ -1,8 +1,5 @@
-# config file created with BobLight Config Maker v.1.0
-# (C) Hans Luijten - http://www.tweaking4all.com
-# Orientation naming as seen from the REAR of the TV
+# config file created By Pierre Goude
 # Date: 4/10/2015 23:03:50
-
 [global]
 interface 127.0.0.1
 port      19333
